tdf#151278 switch off charts number format from source

Labels get their number format usually from source. When copy/pasted
the chart has no connection to a source format anymore.
The related LinkNumberFormatToSource flag is therefore reset.
The label (data series) number format used is now also saved.
Also: tdf#164724 tdf#164728 tdf#164729

Change-Id: I98985d7979f449f5f3c6c8faaff2ce97811cc38e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181089
Tested-by: allotropia jenkins <jenkins@allotropia.de>
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>